# RegPanzer

./: CMakeLists.txt  LICENSE  README.md  RegPanzer TODO list.txt
Benchmark/: Benchmark.cpp  BenchmarkData.cpp  CompilerGeneratedMatcherBenchmark.cpp  GeneratedBinaryMatcherBenchmark.cpp  LlvmRegexMatcherBenchmark.cpp  MatcherBenchmark.cpp  PcreBenchmark.cpp  StdRegexMatcherBenchmark.cpp
Compiler/: main.cpp
RegPanzerLib/: Matcher.cpp  Matcher.hpp  MatcherGeneratorLLVM.cpp  MatcherGeneratorLLVM.hpp  Options.hpp  Parser.cpp  Parser.hpp  PopLLVMWarnings.hpp  PushDisableLLVMWarnings.hpp  RegexElements.hpp  RegexGraph.cpp  RegexGraph.hpp  RegexGraphMatcher.cpp  RegexGraphMatcher.hpp  RegexGraphOptimizer.hpp  RegexGraphOptizer.hpp  RegexpBuilder.cpp  RegexpBuilder.hpp  RegexpElements.hpp  Utils.hpp
RegPanzerLib/src/: Matcher.cpp  MatcherGeneratorLLVM.cpp  Parser.cpp  RegexGraph.cpp  RegexGraphOptimizer.cpp  RegexGraphOptizer.cpp  Utils.cpp
Tests/: AlternativesPossessificationTest.cpp  Benchmark.cpp  BenchmarkData.hpp  CompilerGeneratedMatcherGroupsExtractionTest.cpp  CompilerGeneratedMatcherTest.cpp  FixedLengthElementSequenceOptimizationTest.cpp  GeneratedLLVMBinaryMatcherFunctionTest.cpp  GeneratedLLVMMatcherFunctionTest.cpp  GeneratedLLVMMatcherGroupsExtractionTest.cpp  GroupsExtractionTest.cpp  GroupsExtractionTestData.cpp  GroupsExtractionTestData.hpp  LlvmRegexGroupsExtractionTest.cpp  LlvmRegexMatcherTest.cpp  LlvmRegexTest.cpp  MatcherTest.cpp  MatcherTestData.cpp  MatcherTestData.hpp  ParserTest.cpp  PcreRegexGroupsExtractionTest.cpp  PcreRegexMatcherTest.cpp  PcreRegexTest.cpp  PossessificationOptimizationTest.cpp  SingleRollbackPointSequenceOptimizationTest.cpp  StdRegexGroupsExtractionTest.cpp  StdRegexMacherTest.cpp  StdRegexTest.cpp  Test.cpp  Utils.cpp  Utils.hpp
TestsBinaryGenerator/: main.cpp
docs/: Oçenka trudojomkosti.txt
